summative.moria.Moria.scala.error
Compilation error:
Moria:18: error: ';' expected but ',' found.
    droite(); avance(), gauche(); avance(); green=true;
                      ^